@@ -19,6 +19,12 @@ WC3 = WooCommerce 3 (WordPress)
 
 5.1.2 (2018-02-??)
 ------------------
+- ALL: currency meta informatie wordt nu gebruikt om bestellingen in andere
+  currencies te converteren naar euro's. Deze meta info moet nu per webshop nog
+  toegevoegd worden.
+- ALL: Als de shop standaard currency geen euro is, maar de order wel, en de
+  currency meta info is aanwezig, wordt de factuur ook geconverteerd nar euros.
+- OC: Ondersteuning voor andere currencies
 - PS: Ondersteuning voor andere currencies.
 - PS: FatalThrowableError: Access to undeclared static property: Acumulus::$module_version
 
